fix: overflow no menu lateral

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,11 @@
-*{
+* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
+}
+
+body{
+   overflow-x: hidden;
 }
 
 :root{
@@ -31,6 +35,7 @@ main{
 }
 
 .menu-lateral{
+   transition: .5s;
    position: absolute;
    top: 7vh;
    right: 0;
@@ -38,12 +43,12 @@ main{
    height: 93vh;
    background-color: rgba(61, 61, 61, 0.719);
    color: white;
-   transition: .5s;
+   /* visibility: hidden; */
 }
 
 .active{
    padding: 20px;
-   visibility: visible;
+   /* visibility: visible; */
    width: 50%;
 }
 
